--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -4,21 +4,25 @@
 
 @layer base {
   body {
-    @apply flex w-full;
+    @apply flex flex-col items-center w-screen h-screen overscroll-none overflow-hidden;
+  }
+
+  header {
+    @apply flex flex-col w-full items-center;
   }
 
   form {
-    @apply flex flex-col items-center justify-center m-6;
+    @apply flex flex-col w-full items-center justify-center p-4;
   }
 
   nav {
-    @apply flex justify-center w-full fixed bg-blue-500 text-white text-center p-2;
+    @apply flex flex-row w-full h-12 justify-center items-center bg-blue-500 text-white;
   }
 }
 
 @layer components {
   .container {
-    @apply flex flex-col items-center justify-center h-screen;
+    @apply flex flex-col items-center justify-center h-screen overscroll-none;
   }
 
   .label {
@@ -26,11 +30,11 @@
   }
 
   .input {
-    @apply placeholder-gray-400 text-black bg-white rounded-md shadow-sm mb-3 text-sm;
+    @apply placeholder-gray-400 text-black bg-white border-gray-200 rounded-md shadow-sm mb-3 text-sm;
   }
 
   .button {
-    @apply font-bold text-white bg-blue-500 rounded-md hover:bg-blue-700 drop-shadow-sm m-1 px-6 py-1
+    @apply font-bold text-white bg-blue-500 rounded-md hover:bg-blue-700 drop-shadow-sm m-1 px-6 py-1;
   }
 
   .link {
@@ -40,11 +44,20 @@
 
 @layer utilities {
   .card {
-    @apply bg-gray-100 border rounded-md shadow-md;
+    @apply flex flex-col items-center  
+    bg-gray-100 border 
+    border-gray-300 
+    rounded-lg 
+    shadow-sm
+    w-fit max-h-[80vh] overflow-y-auto overflow-x-hidden;
+  }
+
+  .file-input {
+    @apply text-center p-2 border border-gray-300 rounded-md shadow-sm w-full max-w-xs;
   }
 
   .formHeader {
-    @apply text-2xl font-bold text-center text-blue-600 m-4;
+    @apply text-2xl font-bold text-center text-blue-600 p-4;
   }
 
   .success {
@@ -55,4 +68,16 @@
     @apply my-1 text-sm font-bold text-center text-red-500 text-wrap;
   }
 
+  .headerImage {
+    @apply w-20 h-20 m-4;
+  }
+
+  .scrollbar-hidden {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, and Opera */
+  }
 }
