--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,9 +6,26 @@
     <link rel="stylesheet" href="/css/output.css" />
   </head>
   <body>
+    <header>
+      <nav>
+        <ul class="flex justify-between">
+          <li>
+            <a class="link" href="/index">Home</a>
+          </li>
+          <li>
+            <a class="link" href="/profile">Profile</a>
+          </li>
+          <li>
+            <a class="link" href="/logout">Logout</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <div class="container">
       <div class="card">
-        <h1 class="formHeader">Login</h1>
+        <div class="headerBox">
+          <h1 class="formHeader">Login</h1>
+        </div>
         <div th:if="${param.error}" class="failure">
           Invalid username or password</div>
         <div th:if="${param.logout}" class="success" >
