--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -22,7 +22,7 @@
 
 @layer components {
   .container {
-    @apply flex flex-col items-center justify-center h-screen overscroll-none;
+    @apply flex flex-col items-center justify-center h-screen overscroll-none pb-12;
   }
 
   .label {
@@ -40,16 +40,33 @@
   .link {
     @apply text-xs text-white rounded-md bg-slate-600 hover:bg-slate-800 drop-shadow-sm m-1 px-1 py-0.5;
   }
+
+  .file-input {
+    @apply text-center p-1 border border-gray-300 rounded-md shadow-sm max-w-xs;
+  }
 }
 
 @layer utilities {
+  .emptyCard {
+    @apply flex flex-col items-center  
+    max-h-[80vh] overflow-y-auto overflow-x-hidden p-4 m-4
+  }
+
   .card {
     @apply flex flex-col items-center  
     bg-gray-100 border 
     border-gray-300 
     rounded-lg 
     shadow-sm
-    w-fit max-h-[80vh] overflow-y-auto overflow-x-hidden;
+    max-h-[80vh] overflow-y-auto overflow-x-hidden;
+  }
+  .cardProfile {
+    @apply flex flex-col items-center  
+    bg-gray-100 border 
+    border-gray-300 
+    rounded-lg 
+    shadow-sm
+    max-h-[40vh] overflow-y-auto overflow-x-hidden;
   }
 
   .file-input {
@@ -69,7 +86,7 @@
   }
 
   .headerImage {
-    @apply w-20 h-20 m-4;
+    @apply w-20 h-20 m-4 rounded-full;
   }
 
   .scrollbar-hidden {
