--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -829,6 +829,7 @@ nav {
   align-items: center;
   justify-content: center;
   overscroll-behavior: none;
+  padding-bottom: 3rem;
 }
 
 .label {
@@ -912,6 +913,19 @@ nav {
   background-color: rgb(30 41 59 / var(--tw-bg-opacity, 1));
 }
 
+.file-input {
+  max-width: 20rem;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+  padding: 0.25rem;
+  text-align: center;
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .visible {
   visibility: visible;
 }
@@ -938,6 +952,10 @@ nav {
 
 .m-2 {
   margin: 0.5rem;
+}
+
+.m-4 {
+  margin: 1rem;
 }
 
 .my-1 {
@@ -998,6 +1016,10 @@ nav {
   height: 100vh;
 }
 
+.max-h-\[40vh\] {
+  max-height: 40vh;
+}
+
 .max-h-\[80vh\] {
   max-height: 80vh;
 }
@@ -1013,6 +1035,10 @@ nav {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-fit {
@@ -1109,6 +1135,10 @@ nav {
   text-wrap: wrap;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -1149,6 +1179,10 @@ nav {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .p-10 {
@@ -1228,6 +1262,10 @@ nav {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .text-black {
@@ -1311,11 +1349,38 @@ nav {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.emptyCard {
+  margin: 1rem;
+  display: flex;
+  max-height: 80vh;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 1rem;
+}
+
 .card {
   display: flex;
   max-height: 80vh;
-  width: -moz-fit-content;
-  width: fit-content;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
+  overflow-x: hidden;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.cardProfile {
+  display: flex;
+  max-height: 40vh;
   flex-direction: column;
   align-items: center;
   overflow-y: auto;
@@ -1383,6 +1448,7 @@ nav {
   margin: 1rem;
   height: 5rem;
   width: 5rem;
+  border-radius: 9999px;
 }
 
 .scrollbar-hidden {
